# monolith

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Monolith.uplugin  README.md
Docs/: API_REFERENCE.md  SPEC.md  TESTING.md  TODO.md
Docs/plans/: phase4_combined.md  phase4_plan.md  phase4_plan_part2.md  phase4_plan_part3.md  phase4_plan_part4.md
MCP/: pyproject.toml
Scripts/: make_release.ps1
Skills/unreal-gas/: unreal-gas.md
Source/MonolithAnimation/Private/: MonolithAnimationActions.cpp
Source/MonolithConfig/Private/: MonolithConfigActions.cpp
Source/MonolithCore/Private/: MonolithAssetUtils.cpp  MonolithCoreTools.cpp
Source/MonolithCore/Public/: MonolithSettings.h
Source/MonolithGAS/: MonolithGAS.Build.cs  MonolithGAS.Build.cs.release
Source/MonolithGAS/Private/: MonolithGASASCActions.cpp  MonolithGASAbilityActions.cpp  MonolithGASAttributeActions.cpp  MonolithGASCueActions.cpp  MonolithGASEffectActions.cpp  MonolithGASInspectActions.cpp  MonolithGASInternal.cpp  MonolithGASScaffoldActions.cpp  MonolithGASTagActions.cpp  MonolithGASTargetActions.cpp
Source/MonolithGAS/Public/: MonolithGASInternal.h
Source/MonolithIndex/Private/: MonolithIndexDatabase.cpp  MonolithIndexSubsystem.cpp
Source/MonolithMesh/: MonolithMesh.Build.cs
Source/MonolithMesh/Private/: MonolithMeshAdvancedLevelActions.cpp  MonolithMeshCityBlockActions.cpp  MonolithMeshContextPropActions.cpp  MonolithMeshModule.cpp  MonolithMeshProceduralActions.cpp
Source/MonolithMesh/Public/: MonolithMeshAdvancedLevelActions.h
Templates/: CLAUDE.md.example
(+3 files in other folders)
